src/cmd/init/wizard/snapshots/belaf__cmd__init__wizard__welcome__tests__welcome_first_run.snap
---
source: src/cmd/init/wizard/welcome.rs
expression: out
---
"┌ Welcome ─────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                   ██████╗ ███████╗██╗      █████╗ ███████╗                   │"
"│                   ██╔══██╗██╔════╝██║     ██╔══██╗██╔════╝                   │"
"│                   ██████╔╝█████╗  ██║     ███████║█████╗                     │"
"│                   ██╔══██╗██╔══╝  ██║     ██╔══██║██╔══╝                     │"
"│                   ██████╔╝███████╗███████╗██║  ██║██║                        │"
"│                   ╚═════╝ ╚══════╝╚══════╝╚═╝  ╚═╝╚═╝                        │"
"│                                    Release Management                        │"
"│                                                                              │"
"│                                                                              │"
"│                            📦 Detected: 0 projects                           │" Hidden by multi-width symbols: [(30, " ")]
"│                                                                              │"
"│                                                                              │"
"│                      This wizard will guide you through:                     │"
"│                          → Changelog preset selection                        │"
"│                             → Project configuration                          │"
"│                               → Repository setup                             │"
"│                                                                              │"
"│                      Press ENTER to start  •  Q to quit                      │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
