src/cmd/init/wizard/snapshots/belaf__cmd__init__wizard__welcome__tests__welcome_reconfigure.snap
---
source: src/cmd/init/wizard/welcome.rs
expression: out
---
"┌ Reconfigure   ● ○ ○ ○ ○ ─────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                   ██████╗ ███████╗██╗      █████╗ ███████╗                   │"
"│                   ██╔══██╗██╔════╝██║     ██╔══██╗██╔════╝                   │"
"│                   ██████╔╝█████╗  ██║     ███████║█████╗                     │"
"│                   ██╔══██╗██╔══╝  ██║     ██╔══██║██╔══╝                     │"
"│                   ██████╔╝███████╗███████╗██║  ██║██║                        │"
"│                   ╚═════╝ ╚══════╝╚══════╝╚═╝  ╚═╝╚═╝                        │"
"│                                                                              │"
"│        ▲ A configuration already exists — continuing will overwrite it       │"
"│                                                                              │"
"│  ──────────────────────────────────────────────────────────────────────────  │"
"│                                                                              │"
"│  STATUS                                                                      │"
"│  0 projects                                                                  │"
"│                                                                              │"
"│  WHAT'S NEXT                                                                 │"
"│    ▸ Select projects and detected bundles                                    │"
"│    ▸ Pick a changelog preset                                                 │"
"│    ▸ Confirm the upstream repository URL                                     │"
"│    ▸ Bootstrap belaf/config.toml + baseline tags                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                           Enter continue  ·  q quit                          │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
